@@ -1,4 +1,7 @@
 ###### TWE 4.5-1 RELEASED ######
+2012-05-09 Sasa Bojanic <sasaboy@together.at>
+   # distribution component output is now zipped into the txm-x.y-z.comp.zip
+
 2012-05-08 Sasa Bojanic <sasaboy@together.at>
    # signing JAR files with Together certificate canceled til the next release
 
